# gtestmock-cmake-template

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  JenkinsFile  Jenkinsfile  README.md  get_gtest.sh  install_gtest.sh  setup.sh
